# tick-task

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEV_SETUP.md  README.md  alembic.ini  ci_monitor.py  dev.py  fin-tasks.db  pyproject.toml  pyrightconfig.json  security_scanner.py  security_validator.py  test_api.py
.cursor/prompts/: 00-specs-foundation.md  01-architecture-api.md  03-security-validation.md  04-integration-ecosystem.md  05-docs-release.md  AGENT_STATE_HANDOFF.md  RELEASE_PREP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 001_create_tasks_table.py
docs/: ACCOMPLISHMENTS.md  API.md  ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  DEVELOPMENT_METRICS.md  HEE_POLICY.md  OPERATIONS.md  ROADMAP.md  SECURITY.md  SPEC.md  TESTING.md  UX_UI.md
docs/ADRs/: ADR-001-synchronous-database-operations.md  ADR-002-markdown-rendering-security.md
docs/hee/: README.md  VERSION.md
frontend/: .eslintrc.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: import.test.tsx
frontend/src/components/: Navigation.tsx  TaskModal.tsx
frontend/src/hooks/: useTasks.ts
frontend/src/test/: setup.ts
frontend/src/types/: api.ts
frontend/src/views/: ContextsView.tsx  InboxView.tsx  TagsView.tsx  TodayView.tsx
prompts/: 00-repo-bootstrap.md  01-spec-editor.md  02-architecture.md  03-api-contract.md  04-data-model.md  05-ux-ui.md  06-testing-strategy.md  07-precommit-ci.md  08-foundation-implementation.md  09-ui-implementation.md  10-api-implementation.md  11-release-hardening.md  12-implementation-requirements.md  13-detailed-architecture-plan.md  14-implementation-roadmap.md  15-dependency-analysis.md  16-testing-implementation.md  17-deployment-packaging.md  PROMPTING_RULES.md
prompts/hee/: 02-heer-runtime.md  06-ecosystem-launch.md  CI_MONITORING_AND_AUTO_FIX.md  PROMPTING_RULES.md  STATE_CAPSULE_GUIDE.md
prompts/hee/.cursor/prompts/: 00-specs-foundation.md  01-architecture-api.md  02-heer-runtime.md  03-security-validation.md  04-integration-ecosystem.md  05-docs-release.md  06-ecosystem-launch.md
prompts/hee/docs/: CONSUMERS.yml  HEE.md  HEER.md  ROADMAP.md  SECURITY.md  SPEC.md
prompts/hee/docs/MODULES/: CI_MONITORING_AND_AUTOFIX.md  PROMPT_GOVERNANCE.md  RELEASE_SYSTEM.md  STATE_CAPSULES.md
prompts/hee/docs/TEMPLATES/: AUTO_FIX_REPORT_TEMPLATE.md  STATE_CAPSULE_TEMPLATE.md
prompts/hee/docs/hee/providers/: GROQ_MODELS.yml
scripts/: calculate_metrics.py  hee-check.sh
src/fin_tasks/: __init__.py  api.py  config.py  database.py  main.py  models.py  schemas.py
src/tick_task/: _version.py  api.py  config.py  database.py  main.py  models.py  schemas.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_database.py  test_integration.py  test_models.py  test_schemas.py
