[build-system]
requires = ["setuptools>=65.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tick-task"
dynamic = ["version"]
description = "Local-first task management application"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core web framework
    "fastapi[standard]>=0.104.0",

    # Database ORM and migrations
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",         # Async SQLite driver
    "alembic>=1.12.0",

    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Additional utilities
    "python-multipart>=0.0.6",  # For file uploads (future)
    "python-dateutil>=2.8.2",   # Date parsing utilities
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",  # Async HTTP client for testing

    # Code quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",

    # Development tools
    "pre-commit>=3.5.0",
]

[project.scripts]
tick-task = "tick_task.main:main"
tick-task-dev = "dev:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tick_task = ["py.typed"]

# setuptools-scm configuration for automatic versioning
[tool.setuptools_scm]
write_to = "src/tick_task/_version.py"
version_scheme = "post-release"
local_scheme = "dirty-tag"

# Black code formatting
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort import sorting
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["tick_task"]
skip = ["__init__.py"]

# mypy type checking
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--asyncio-mode=auto",
    "--cov=tick_task",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=55",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "asyncio: async tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["tick_task"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
